--- a/CaroGame/CaroGame.vcxproj.filters
+++ b/CaroGame/CaroGame.vcxproj.filters
@@ -323,13 +323,13 @@
     <Media Include="asset\audio\Key.wav">
       <Filter>Resource Files\Audio</Filter>
     </Media>
-    <Media Include="asset\audio\Lose.mp3">
-      <Filter>Resource Files\Audio</Filter>
-    </Media>
     <Media Include="asset\audio\MenuBGM.mp3">
       <Filter>Resource Files\Audio</Filter>
     </Media>
     <Media Include="asset\audio\Win.mp3">
+      <Filter>Resource Files\Audio</Filter>
+    </Media>
+    <Media Include="asset\audio\Lose.wav">
       <Filter>Resource Files\Audio</Filter>
     </Media>
   </ItemGroup>
