--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -173,6 +173,14 @@
     <ClCompile Include="Logo_Caro.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Navigate.cpp" />
+    <ClCompile Include="PokemonBlack.cpp" />
+    <ClCompile Include="PokemonBlue.cpp" />
+    <ClCompile Include="PokemonGray.cpp" />
+    <ClCompile Include="PokemonGreen.cpp" />
+    <ClCompile Include="PokemonPink.cpp" />
+    <ClCompile Include="PokemonRed.cpp" />
+    <ClCompile Include="PokemonWhite.cpp" />
+    <ClCompile Include="PokemonYellow.cpp" />
     <ClCompile Include="ReplayLoad.cpp" />
     <ClCompile Include="ReplaySave.cpp" />
     <ClCompile Include="Result.cpp" />
@@ -214,6 +222,14 @@
     <ClInclude Include="Logo_Caro.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Navigate.h" />
+    <ClInclude Include="PokemonBlack.h" />
+    <ClInclude Include="PokemonBlue.h" />
+    <ClInclude Include="PokemonGray.h" />
+    <ClInclude Include="PokemonGreen.h" />
+    <ClInclude Include="PokemonPink.h" />
+    <ClInclude Include="PokemonRed.h" />
+    <ClInclude Include="PokemonWhite.h" />
+    <ClInclude Include="PokemonYellow.h" />
     <ClInclude Include="ReplayLoad.h" />
     <ClInclude Include="ReplaySave.h" />
     <ClInclude Include="Result.h" />
