--- a/CaroGame/CaroGame.vcxproj.filters
+++ b/CaroGame/CaroGame.vcxproj.filters
@@ -207,10 +207,10 @@
     <ClCompile Include="ReplayScreenView.cpp">
       <Filter>Screens\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Tutorial.cpp">
-      <Filter>Core\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GameEndView.cpp">
+      <Filter>Screens\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tutorial.cpp">
       <Filter>Screens\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -371,13 +371,13 @@
     <ClInclude Include="ReplayScreenView.h">
       <Filter>Screens\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Tutorial.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Pokemon.h">
       <Filter>Graphics\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameEndView.h">
+      <Filter>Screens\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tutorial.h">
       <Filter>Screens\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
