Update report template

--- a/Report/Final/ReportBib.yml
+++ b/Report/Final/ReportBib.yml
@@ -43,7 +43,7 @@ Minimax:
   title: Minimax
   url: https://vi.wikipedia.org/wiki/Minimax
 
-Minimax-Figure:
+MiniMaxFig:
   type: Web
-  title: Minimax
-  url: https://vi.wikipedia.org/wiki/Minimax
+  title: MiniMax image
+  url: https://google.com
