--- a/Report/Final/ReportBib.yml
+++ b/Report/Final/ReportBib.yml
@@ -67,3 +67,8 @@ Alpha_Beta_Pruning:
   type: Web
   title: Alpha-Beta pruning
   url: https://en.wikipedia.org/wiki/Alpha%E2%80%93beta_pruning
+
+zobrist_chess:
+  type: Web
+  title: Zobrist hashing in chess
+  url: https://www.chessprogramming.org/Zobrist_Hashing
